ui_tests/fn_calls_4.stderr
error: cannot call non-function type: Bart[]
  ┌─ main.box:4:6
  │
4 │     (new Bart {})()
  │      ^^^^^^^^^^^

