ui_tests/fn_calls_4.box
type Bart {}

fn bar() {
    (new Bart {})()
}